--- a/introduction.tex
+++ b/introduction.tex
@@ -1,19 +1,19 @@
 \section{Introduction} \label{sec:intro}
 
-This document prests the release manafgement approach for \gls{LSST} \gls{DM} software products.
+This document presents the release management approach for \gls{LSST} \gls{DM} software products.
 
-First of all, in section \ref{sec:reqs}, the release requirements for the varius  stakeholders are identified.
-The release requirements are then consolideated in section \ref{sec:reqdef}.
+First of all, in section \ref{sec:reqs}, the release requirements for the various  stakeholders are identified.
+The release requirements are then consolidated in section \ref{sec:reqdef}.
 These requirements are not formal project requirements, as given for example in the \gls{DMS} requirements specification \citeds{LSE-61}, but are nevertheless important to ensure the project's goals.
 
-Based on the consolidated reqirements, a set of policies are derived in section \ref{sec:policy} and guidelines on their applicability is provided in section \ref{sec:noncompliance}.
+Based on the consolidated requirements, a set of policies are derived in section \ref{sec:policy} and guidelines on their applicability is provided in section \ref{sec:noncompliance}.
 
-Finally section \ref{sec:process} goves a high level overview of the release process.
+Finally section \ref{sec:process} gives a high level overview of the release process.
 
 
 \subsection{Releases Status}\label{sec:sci}
 
-Currently, only the \gls{Science Pipelines} product is released. 
+Currently, only the \gls{Science Pipelines} product is released.
 Builds and releases are made on the following time-based cadence:
 
 \begin{itemize}
@@ -23,24 +23,20 @@ Builds and releases are made on the following time-based cadence:
 \end{itemize}
 
 The time needed to consolidate an official release from a weekly build is considerable.
-Usually 2 or 3 weeks are sufficient but in some cases it may take more than a month. 
+Usually 2 or 3 weeks are sufficient but in some cases it may take more than a month.
 Consequently, by the time a release becomes available to the users, it is already old.
 For this reason, users generally prefer to work with weekly builds that are sufficiently stable and include all new functionalities completed in the last week.
 
 The \gls{Science Pipelines} release checklist is documented in \citeds{SQR-016}.
-The technical note \citeds{DMTN-106} generalize the process and summarize the technical problems that need to be solve in order that this procedur can be applied to other software products.
+The technical note \citeds{DMTN-106} generalizes the process and summarizes the technical problems that need to be solved to make the  procedure applicable to other software products.
 
 
 \subsection{Policy Applicability} \label{sec:applicability}
 
 This policy shall be applicable to all \gls{DM} software products.
 
-The \gls{DM} software products are defined in the LDM-294. 
+The \gls{DM} software products are defined in the LDM-294.
 The approved product tree is available online at\url{https://ldm-294.lsst.io/ProductTreeLand.pdf}
-
-The policy may also be applicable to other software products development by other \gls{LSST} subsystems.
-
-In case 
 
 
 \subsection{Definitions} \label{sec:defs}
