--- a/policy.tex
+++ b/policy.tex
@@ -8,7 +8,7 @@ The following policy is provided taking into account the requirements described 
 The DM release versioning shall follow Semantic Versioning\footnote{\url{https://semver.org/}} as described in \citeds{DMTN-106}, section 3.3.
 
 This policy partially answers to \ref{sec:stable} requirement.
-In general, API stability is a development aspect that needs to be addressed in the \citeds{DevGuideL}.
+In general, API stability is a development aspect that needs to be addressed in the \citeds{DevGuide}.
 
 
 \subsection{Release Schedule Policy} \label{sec:schedulepolicy}
@@ -22,7 +22,6 @@ A release plan including for each release following information:
 \item specify the corresponding milestone or RFC
 \item if it is a time-based release: specify the timing when the release shall be done (for example, every 6 months)
 \item if it is a functionality based release: specify which functionalities shall be included in the release
-\item specify the list of known stakeholders
 \end{itemize}
 
 This policy answers requirement \ref{sec:milestone} .
@@ -32,7 +31,7 @@ This policy answers requirement \ref{sec:milestone} .
 
 Patch releases shall be scheduled, tested and approved by the DMCCB as much as possible.
 However, the DMPM can authorize urgent changes to the operational systems in case of need.
-The backporting capability is a development aspect that needs to be addressed in the \citeds{DevGuideL}.
+The backporting capability is a development aspect that needs to be addressed in the \citeds{DevGuide}.
 This policy answers requirement  \ref{sec:backport} .
 
 
@@ -94,9 +93,8 @@ This policy answers to requirement \ref{sec:thirdsw}.
 
 \subsection{Software License Policy} \label{sec:licensepolicy}
 
-DM shall adopt an appropriate software license in order to fulfill the requirement expressed in section \ref{sec:license}.
-Once the license has been identified, this policy can be completed.
-\footnote{See discussion in \jira{DM-5031}}
+DM software license policy is addressed in the \citeds{DevGuide}, in following section
+\url{https://developer.lsst.io/legal/licensing-overview.html#choosing-a-source-code-license}.
 
 
 \newpage
@@ -113,7 +111,7 @@ The approved product tree is available online at \url{https://ldm-294.lsst.io/Pr
 
 Each T/CAM may  specify which policy is not applicable for the specific software product and why.
 
-Each stakeholder shall ensure that the level of compliance provided by the required software products is acceptable for them.
+Each stakeholder should ensure that the level of compliance provided by the required software products is acceptable for them.
 
 The DM-CCB shall ensure that the available compliance information is agreed between T/CAMs and stakeholders.
 
