--- a/policy.tex
+++ b/policy.tex
@@ -1,6 +1,6 @@
 \section{Release Policy} \label{sec:policy}
 
-The following policy is provided taking into account the requirements described in the previous section \ref{sec:reqdef}.
+The following policies are provided taking into account the requirements described in the previous section \ref{sec:reqdef}.
 
 
 \subsection{Versioning Policy} \label{sec:versinopolicy}
