--- a/requirements.tex
+++ b/requirements.tex
@@ -89,7 +89,7 @@ In all cases, the software used must be clearly identified (Github revision at l
 \section{Requirements Consolidation} \label{sec:reqdef}
 
 The main purpose of this section is to identify all possible release requirements.
-In the first subsection, a few general requirements are given.
+In the first subsection a few general requirements are given.
 The second subsection summarizes the requirements given by the stakeholders.
 
 A summary overview of the requirements per stakeholder is given at the end of the section.
@@ -170,7 +170,7 @@ The following table gives an overview of the release requirements applicable for
 \setlength\LTright{-0.5in}
 \begin{longtable}{p{2.4cm}p{1.2cm}p{1.4cm}p{1.4cm}p{1.3cm}p{1.3cm}p{1.3cm}p{1.7cm}p{1.3cm}p{1.3cm}}\hline
 &
-\textbf{SW Ident.}&\textbf{Release Doc.}&\textbf{Release Test}&\textbf{Funct. Based}&\textbf{Time Based}&\textbf{Patch}&\textbf{3rd Party SW}&\textbf{Stable API} &\textbf{Policy}\\ \hline
+\textbf{SW Ident.}&\textbf{Release Doc.}&\textbf{Release Test}&\textbf{Funct. Based}&\textbf{Time Based}&\textbf{Patch}&\textbf{3rd Party SW}&\textbf{Stable API} &\textbf{License}\\ \hline
 \textbf{LSST Project} \ref{sec:lsstreqs}&
 YES                     & YES                         & YES                         &  YES                         &  YES                      & YES             & YES                          &  YES.                   & YES   \\ \hline
 \textbf{Science Community} \ref{sec:comreqs}&
