Correct citation to DevGuide

--- a/policy.tex
+++ b/policy.tex
@@ -8,7 +8,7 @@ The following policies are provided taking into account the requirements describ
 The DM release versioning shall follow Semantic Versioning\footnote{\url{https://semver.org/}} as described in \citeds{DMTN-106}, section 3.3.
 
 This policy partially answers to \ref{sec:stable} requirement.
-In general, API stability is a development aspect that needs to be addressed in the \citeds{DevGuide}.
+In general, API stability is a development aspect that needs to be addressed in the \citep{DevGuide}.
 
 
 \subsection{Release Schedule Policy} \label{sec:schedulepolicy}
@@ -31,7 +31,7 @@ This policy answers requirement \ref{sec:milestone} .
 
 Patch releases shall be scheduled, tested and approved by the DMCCB as much as possible.
 However, the DMPM can authorize urgent changes to the operational systems in case of need.
-The backporting capability is a development aspect that needs to be addressed in the \citeds{DevGuide}.
+The backporting capability is a development aspect that needs to be addressed in the \citep{DevGuide}.
 This policy answers requirement  \ref{sec:backport} .
 
 
