Small changes agreed with Leanne

--- a/LDM-672.tex
+++ b/LDM-672.tex
@@ -19,7 +19,7 @@
 % \setDocSubtitle{A subtitle}
 
 \author{%
-L.~P.~Guy, G. Comoretto, W. O'Mullane, K.-T. Lim, M. Butler, M. Gelman
+G. Comoretto, L.~P.~Guy, W. O'Mullane, K.-T. Lim, M. Butler, M. Gelman
 }	
 
 \setDocRef{LDM-672}
@@ -32,7 +32,7 @@ L.~P.~Guy, G. Comoretto, W. O'Mullane, K.-T. Lim, M. Butler, M. Gelman
 \setDocUpstreamVersion{\vcsrevision}
 
 \setDocAbstract{%
-This document outlines the management and policies for \gls{LSST} \gls{DM} software product releases.
+This document outlines the policies and high level management approach for \gls{LSST} \gls{DM} software product releases.
 }
 
 
