--- a/process.tex
+++ b/process.tex
@@ -1,4 +1,4 @@
-\section{Release Management} \label{sec:process}
+\section{Release High Level Process} \label{sec:process}
 
 The DM-CCB maintains the release plan, LDM-564, synchronized with the project milestones.
 \footnote{As of June 2019 the release plan needs to be reviewed and the release milstones listed therein need to be made consistent with the scope of the document.
