Tweak policy wording.

--- a/requirements.tex
+++ b/requirements.tex
@@ -145,7 +145,7 @@ The test should be documented in a test report.
 The following list of requirements is derived from the above section \ref{sec:reqs}.
 
 
-\subsubsection{Releases Schedule Requirement} \label{sec:milestone}
+\subsubsection{Release Schedule Requirement} \label{sec:milestone}
 
 Releases on a software product shall be scheduled in advance.
 
