--- a/policy.tex
+++ b/policy.tex
@@ -101,19 +101,10 @@ Specific requirements for particular aspects of the DM codebase are addressed in
 \newpage
 \section{Applicability of policies } \label{sec:applicability}
 
-The policies described in the previous section \ref{sec:policy} are mandatory, except where specified as non-mandatory.
-
-The \gls{DM} software products, on which these policies are applicable, are defined in the LDM-294.
-The approved product tree is available online at \url{https://ldm-294.lsst.io/ProductTreeLand.pdf}
+The policies described in \S\ref{sec:policy} of this document are mandatory for all DM software products, as defined in \citeds{LDM-294}, except where otherwise specified.
 
 
+\subsection{Non-Compliance} \label{sec:noncompliance}
 
-\subsection{Non Compliance} \label{sec:noncompliance}
-
-Each T/CAM may  specify which policy is not applicable for the specific software product and why.
-
-Each stakeholder should ensure that the level of compliance provided by the required software products is acceptable for them.
-
-The DM-CCB shall ensure that the available compliance information is agreed between T/CAMs and stakeholders.
-
-Each time a policy is not considered applicable to a software product the effectiveness of the process is reduced and the risks of problems increase.
+Individual T/CAMs or Product Owners may request that the DM-CCB issue exemptions from specific aspects of policy for particular software products.
+The DM-CCB is responsible for ensuring that the resulting system still meets the needs of applicable stakeholders, and for ensuring that the overall integrity of the DM system is maintained.
