--- a/requirements.tex
+++ b/requirements.tex
@@ -105,7 +105,7 @@ In most of cases, this implies releases should be made on a regular cadence --- 
 
 
 \newpage
-\section{Requirements Consolidation} \label{sec:reqdef}
+\section{Consolidated Requirements} \label{sec:reqdef}
 
 The main purpose of this section is to identify all possible release requirements.
 In the first subsection a few general requirements are given.
