--- a/process.tex
+++ b/process.tex
@@ -4,17 +4,17 @@ The DM-CCB maintains the release plan, LDM-564, synchronized with the project mi
 \footnote{As of June 2019 the release plan needs to be reviewed and the release milstones listed therein need to be made consistent with the scope of the document.
 Issue \jira{DM-17001} is tracking this activity.}
 
-Any unscheduled release, major, minor or patch, including fixes backport on top of an existing release, needs to be requested to the DM-CCB using a RFC Jira issue.
-The RFC shall contain:
+Any unscheduled release --- major, minor or patch, and including a request to backport fixes to an earlier release --- must be requested of the DM-CCB using a Jira issue of type ``RFC''.
+The issue shall describe:
 
 \begin{itemize}
-\item The justification of the release.
-\item The date the release is requested to be available.
-\item A list of functionalitis or fixes (jira issues) which are requested to be implemented in the release.
+\item The justification for the release.
+\item The date by which the release should be available.
+\item A list of specific functionality and/or bug fixes which should be contained in the release, specified in terms of Jira tickets.
 \end{itemize}
 
-The DM-CCB  will assess the release request within one week. 
-If the release is urgent, DM-CCB will assess it  within 24 hours.
+The DM-CCB will assess the release request within one week.
+If the release is urgent, DM-CCB may assess it within 24 hours.
 The DM-CCB will approve or reject the proposed release and add a comment to the RFC with the reason of rejection or, in case of approval, with the following information:
 
 \begin{itemize}
@@ -23,7 +23,5 @@ The DM-CCB will approve or reject the proposed release and add a comment to the 
 \item The list of Jira issues that will be included.
 \end{itemize}
 
-In the case an immediate fix is required for a critical operations activity, that can't wait a formal approval of the DM-CCB (24 hours),
-a quick decision can be taken by the \gls{DMPM} and a requested fix can be implemented and released immediately, if feasible.
-However, an \gls{RFC} has to be filed a posteriori, and the DM-CCB is required to assess it.
-
+In the case an immediate fix is required for a critical operations activity, a quick decision can be taken by the DM Project Manager and a requested fix can be implemented and released as rapidly as possible.
+However, an \gls{RFC} has to be filed a posteriori, and the DM-CCB is required to review it.
