--- a/policy.tex
+++ b/policy.tex
@@ -21,7 +21,7 @@ Each release shall be made following a release plan, which provides the followin
 
 \begin{itemize}
 \item when the release is expected;
-\item the specify the corresponding milestone or RFC;
+\item the corresponding milestone or RFC;
 \item if it is a time-based release: specify the release cadence (for example, every 6 months);
 \item if it is a functionality based release: specify which features shall be included in the release.
 \end{itemize}
