Added small rephrase

--- a/requirements.tex
+++ b/requirements.tex
@@ -20,8 +20,8 @@ The main reason for DM to do software releases is to fulfill the project outcome
 
 The LSST Data Products will be obtained processing the data collected by the telescope using Data Management software products.
 
-The processing shall be done in a controlled way using officially released software.
-In order to do that, the software products releases shall:
+In order to controll the provenance of the LSST Data Products, the processing shall be done in a controlled way and using officially released software.
+This imply that the releases shall:
 
 \begin{itemize}
 \item fulfill the data processing as per project milestones. This imply:
