Added backport term

--- a/process.tex
+++ b/process.tex
@@ -4,7 +4,7 @@ The DM-CCB maintains the release plan, LDM-564, synchronized with the project mi
 \footnote{As of June 2019 the release plan needs to be reviewed and the release milstones listed therein need to be made consistent with the scope of the document.
 Issue \jira{DM-17001} is tracking this activity.}
 
-Any unscheduled release, major, minor or patch, needs to be requested to the DM-CCB using a RFC Jira issue.
+Any unscheduled release, major, minor or patch, including fixes backport on top of an existing release, needs to be requested to the DM-CCB using a RFC Jira issue.
 The RFC shall contain:
 
 \begin{itemize}
