Clean up requirements table.

--- a/LDM-672.tex
+++ b/LDM-672.tex
@@ -1,4 +1,5 @@
 \documentclass[DM,lsstdraft,toc]{lsstdoc}
+\usepackage{bbding}
 
 % lsstdoc documentation: https://lsst-texmf.lsst.io/lsstdoc.html
 
