--- a/requirements.tex
+++ b/requirements.tex
@@ -185,26 +185,24 @@ DM software shall be released with an appropriate license that permits distribut
 
 The following table gives an overview of the release requirements applicable for each stakeholder.
 
-\setlength\LTleft{-0.4in}
-\setlength\LTright{-0.5in}
-\begin{longtable}{p{2.4cm}p{1.2cm}p{1.4cm}p{1.4cm}p{1.3cm}p{1.3cm}p{1.3cm}p{1.7cm}p{1.3cm}p{1.3cm}}\hline
+\setlength\LTleft{-0.55in}
+\setlength\LTright{-0.55in}
+\begin{longtable}{lccccccccc}\hline
 &
-\textbf{SW Ident.}&\textbf{Release Doc.}&\textbf{Release Test}&\textbf{Funct. Based}&\textbf{Time Based}&\textbf{Patch}&\textbf{3rd Party SW}&\textbf{Stable API} &\textbf{License}\\ \hline
-\textbf{LSST Project} \ref{sec:lsstreqs}&
-YES                     & YES                         & YES                         &  YES                         &  YES                      &                     & YES                          &                            & YES   \\ \hline
-\textbf{Science Community} \ref{sec:comreqs}&
-YES                     & YES                         &                                 &                                   &  YES                     & YES             &                                 &  YES                    &            \\ \hline
-\textbf{Proc. Centers} \ref{sec:procreqs}&
-YES                     & YES                         & YES                         & YES                           &                              & YES             &                                  &                             &            \\ \hline
-\textbf{Other Operations} \ref{sec:otherreqs}&
-YES                     & YES                         & YES                         & YES                           &                              & YES             &                                  &                             &            \\ \hline
-\textbf{Infrastructure} \ref{sec:infreqs}&
-YES                     & YES                         & YES                         &                                   &  YES                     & YES             &                                  &  YES                    &            \\ \hline
-\textbf{Construction} \ref{sec:nonopsreqs}&
-YES                     & YES.                        & YES.                       & YES                           &  YES                     & YES             &                                  &  YES                    &            \\ \hline
+\rotatebox{60}{\textbf{SW Ident.}}&\rotatebox{60}{\textbf{Release Doc.}}&\rotatebox{60}{\textbf{Release Test}}&\rotatebox{60}{\textbf{Funct. Based}}&\rotatebox{60}{\textbf{Time Based}}&\rotatebox{60}{\textbf{Patch}}&\rotatebox{60}{\textbf{3rd Party SW}}&\rotatebox{60}{\textbf{Stable API}}&\rotatebox{60}{\textbf{License}}\\ \hline
+\textbf{LSST Project}\\ (S\ref{sec:lsstreqs}) &
+\Checkmark                     & \Checkmark                         & \Checkmark                         &  \Checkmark                         &  \Checkmark                      &                     & \Checkmark                          &                            & \Checkmark   \\ \hline
+\textbf{Scientific}\\\textbf{Community} (\S\ref{sec:comreqs}) &
+\Checkmark                     & \Checkmark                         &                                 &                                   &  \Checkmark                     & \Checkmark             &                                 &  \Checkmark                    &            \\ \hline
+\textbf{Proc. Centers}\\ (\S\ref{sec:procreqs})&
+\Checkmark                     & \Checkmark                         & \Checkmark                         & \Checkmark                           &                              & \Checkmark             &                                  &                             &            \\ \hline
+\textbf{Other Ops.}\\ (\S\ref{sec:otherreqs})&
+\Checkmark                     & \Checkmark                         & \Checkmark                         & \Checkmark                           &                              & \Checkmark             &                                  &                             &            \\ \hline
+\textbf{Infrastructure}\\ (\S\ref{sec:infreqs})&
+\Checkmark                     & \Checkmark                         & \Checkmark                         &                                   &  \Checkmark                     & \Checkmark             &                                  &  \Checkmark                    &            \\ \hline
+\textbf{Construction}\\ (\S\ref{sec:nonopsreqs})&
+\Checkmark                     & \Checkmark                         & \Checkmark                        & \Checkmark                           &  \Checkmark                     & \Checkmark             &                                  &  \Checkmark                    &            \\ \hline
 \hline
 \end{longtable}
 \setlength\LTleft{0in}
 \setlength\LTright{0in}
-
-
