Add me as author.

--- a/LDM-672.tex
+++ b/LDM-672.tex
@@ -16,12 +16,9 @@
 % \title[Short title]{Title}
 \title{LSST Software Release Management}
 
-% Optional subtitle
-% \setDocSubtitle{A subtitle}
-
 \author{%
-G. Comoretto, L.~P.~Guy, W. O'Mullane, K.-T. Lim, M. Butler, M. Gelman
-}	
+G. Comoretto, L.~P.~Guy, W. O'Mullane, K.-T. Lim, M. Butler, M. Gelman, J.D.~Swinbank
+}
 
 \setDocRef{LDM-672}
 
