--- a/process.tex
+++ b/process.tex
@@ -1,6 +1,6 @@
 \section{Release High Level Process} \label{sec:process}
 
-The DM-CCB maintains the release plan, LDM-564, synchronized with the project milestones.
+The DM-CCB maintains the release plan, \citeds{LDM-564}, synchronized with the project milestones.
 \footnote{As of June 2019 the release plan needs to be reviewed and the release milstones listed therein need to be made consistent with the scope of the document.
 Issue \jira{DM-17001} is tracking this activity.}
 
