--- a/LDM-672.tex
+++ b/LDM-672.tex
@@ -40,7 +40,7 @@ This document outlines the policies and high level management approach for \gls{
 % See LPM-51 for version number policy.`
 \setDocChangeRecord{%
   \addtohist{}{2018-12-03}{First draft}{L.~Guy, G.~Comoretto}
-  \addtohist{1.0}{2019-07-XX}{First issue, approved on RFC-619}{G.~Comoretto}
+  \addtohist{1.0}{2019-07-25}{First issue, approved on RFC-619}{G.~Comoretto}
 }
 
 \begin{document}
@@ -69,6 +69,7 @@ This document outlines the policies and high level management approach for \gls{
 \section{References} \label{sec:bib}
 \bibliography{lsst,lsst-dm,refs_ads,refs,books,local}
 
+\newpage
 %Make sure lsst-texmf/bin/generateAcronyms.py is in your path
 \printglossaries
 
