Removed draft and fixed date

--- a/LDM-672.tex
+++ b/LDM-672.tex
@@ -1,4 +1,4 @@
-\documentclass[DM,lsstdraft,toc]{lsstdoc}
+\documentclass[DM,toc]{lsstdoc}
 \usepackage{bbding}
 
 % lsstdoc documentation: https://lsst-texmf.lsst.io/lsstdoc.html
@@ -22,7 +22,7 @@ G. Comoretto, L.~P.~Guy, W. O'Mullane, K.-T. Lim, M. Butler, M. Gelman, J.D.~Swi
 
 \setDocRef{LDM-672}
 
-\date{\today}
+\date{2019-07-25}
 
 % Optional: name of the document's curator
 \setDocCurator{Gabriele Comoretto}
